--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,32 +1,38 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>로그인</title>
-    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <title th:text="#{title.login}">Login</title>
+    <link rel="stylesheet" th:href="@{/css/login.css}">
 </head>
 <body>
-<div class="header">
-    <h1>로그인</h1>
-</div>
-<div class="navbar">
-    <a th:href="@{/}">홈</a>
-    <a th:href="@{/posts}">게시글 목록</a>
-    <a th:href="@{/members/register}">회원 가입</a>
-</div>
-<div class="container">
-    <form action="/login" method="post">
-        <label for="username">사용자명:</label>
-        <input type="text" id="username" name="username" required />
+<div class="login-container">
+    <h1 th:text="#{login.title}">Login</h1>
 
-        <label for="password">비밀번호:</label>
-        <input type="password" id="password" name="password" required />
+    <!-- 회원가입 성공 메시지 -->
+    <div th:if="${successMessage}" class="success-message">
+        <p th:text="${successMessage}"></p>
+    </div>
 
-        <button type="submit">로그인</button>
+    <!-- 로그인 폼 -->
+    <form th:action="@{/login}" method="post">
+        <div class="form-group">
+            <label for="username" th:text="#{label.username}">Email:</label>
+            <input type="text" id="username" name="username" required>
+        </div>
+        <div class="form-group">
+            <label for="password" th:text="#{label.password}">Password:</label>
+            <input type="password" id="password" name="password" required>
+        </div>
+        <button type="submit" th:text="#{button.login}">Login</button>
     </form>
-    <a class="button" th:href="@{/members/register}">회원 가입하기</a>
-</div>
-<div class="footer">
-    <p>&copy; 2023 Spring Boot Project</p>
+
+    <!-- 에러 및 로그아웃 메시지 -->
+    <div th:if="${param.error}">
+        <p style="color: red;" th:text="#{login.error}">Invalid username or password</p>
+    </div>
+    <div th:if="${param.logout}">
+        <p style="color: green;" th:text="#{login.logout.success}">You have been logged out successfully</p>
+    </div>
 </div>
 </body>
 </html>
