--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+    <meta charset="UTF-8">
     <title th:text="#{title.login}">Login</title>
+    <link rel="stylesheet" th:href="@{/css/style.css}">
     <link rel="stylesheet" th:href="@{/css/login.css}">
 </head>
 <body>
+<!-- 헤더 포함 -->
+<div th:replace="~{header :: .top-banner}"></div>
+
 <div class="login-container">
     <h1 th:text="#{login.title}">Login</h1>
 
@@ -14,7 +19,7 @@
     </div>
 
     <!-- 로그인 폼 -->
-    <form th:action="@{/login}" method="post">
+    <form th:action="@{/login}" method="post" class="login-form">
         <div class="form-group">
             <label for="username" th:text="#{label.username}">Email:</label>
             <input type="text" id="username" name="username" required>
@@ -23,16 +28,25 @@
             <label for="password" th:text="#{label.password}">Password:</label>
             <input type="password" id="password" name="password" required>
         </div>
-        <button type="submit" th:text="#{button.login}">Login</button>
+        <button type="submit" class="btn login-btn" th:text="#{button.login}">Login</button>
     </form>
 
     <!-- 에러 및 로그아웃 메시지 -->
-    <div th:if="${param.error}">
-        <p style="color: red;" th:text="#{login.error}">Invalid username or password</p>
+    <div th:if="${param.error}" class="error-message">
+        <p th:text="#{login.error}">Invalid username or password</p>
     </div>
-    <div th:if="${param.logout}">
-        <p style="color: green;" th:text="#{login.logout.success}">You have been logged out successfully</p>
+    <div th:if="${param.logout}" class="logout-message">
+        <p th:text="#{login.logout.success}">You have been logged out successfully</p>
+    </div>
+
+    <!-- 회원가입 링크 -->
+    <div class="register-link">
+        <p th:text="#{login.no.account}">계정이 없으신가요?</p>
+        <a th:href="@{/register}" th:text="#{button.user.register}">회원가입</a>
     </div>
 </div>
+
+<!-- 푸터 포함 -->
+<div th:replace="~{footer :: .footer}"></div>
 </body>
 </html>
